# mulle-aba

./: .gitignore  .touch  .travis.yml  BUILD.md  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  README.md  RELEASENOTES.md  build.sh  clib.json  install-osx.sh  mulle-aba.sublime-project  package.json
.bootstrap/: embedded_repositories  gits  repositories
.bootstrap/settings/: sdks
.github/workflows/: semgrep.yml
.mulle-env/etc/: optionaltool
.mulle-env/share/: environment-aux.sh  environment-extension.sh  environment-project.sh
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/sourcetree/: config
.mulle/share/sourcetree/: config
.travis.d/: script
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: Environment.cmake  LinkManifestC.cmake  Standalone.cmake  StandaloneC.cmake  StartupC.cmake
cola/: api.md.bud  description.md.bud  properties.plist
dox/: API.md  API_ABA.md  BUILD.md  mulle_aba.md  process-thread.dot  states.dot  states.numbers  world-handling.md
example/: main.m
mulle-aba.xcodeproj/: project.pbxproj
mulle-aba.xcodeproj/xcshareddata/xcschemes/: Libraries.xcscheme
mulle-project/: formula-info.sh
run-on-ipad/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
run-on-ipad/Base.lproj/: LaunchScreen.xib
src/: _mulle-aba-dependencies.h  _mulle-aba-include-private.h  _mulle-aba-include.h  dependencies.h  include-private.h  include.h  ll_main.c  main.c  mulle-aba-defines.h  mulle-aba-linkedlist.c  mulle-aba-linkedlist.h  mulle-aba-standalone.c  mulle-aba-storage.c  mulle-aba-storage.h  mulle-aba.c  mulle-aba.h  mulle_aba.c  mulle_aba.h  mulle_aba_defines.h  mulle_aba_linked_list.c  mulle_aba_linked_list.h  mulle_aba_linkedlist.c  mulle_aba_linkedlist.h  mulle_aba_storage.c  mulle_aba_storage.h  mulle_atomic.h  mulle_callback_types.h  pointer_array.h
src/generic/: include.h
src/reflect/: _mulle-aba-include-private.h  _mulle-aba-include.h  _mulle-aba-provide.h  _mulle-aba-versioncheck.h
templates/: README.md.scion
templates/dox/: BUILD.md.scion
test/.mulle-sde/share/: mulle-test
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-project.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/sde/: mulle-test
test/include/mulle-aba/: _dependencies.h  dependencies.h  mulle-aba-defines.h  mulle-aba-linkedlist.h  mulle-aba-storage.h  mulle-aba.h
test/include/mulle-aba/cmake/: DependenciesAndLibraries.cmake  _Dependencies.cmake
test/linkedlist/: ll_main  ll_main.c
test/punish/: punish.c
tests/: build-test.sh  run-test.sh
tests/linkedlist/: ll_main.c
tests/punish/: punish.c
